removing custom css

--- a/ _config.yml
+++ b/ _config.yml
@@ -1,5 +1,56 @@
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: "Recipe Nutrition and Rating Analysis"
+description: "Explore how nutritional metrics impact recipe ratings."
+url: "https://torallify.github.io/recipe-nutrition-rating-analysis/"
+baseurl: "/recipe-nutrition-rating-analysis/" 
+
+author: 
+  name: "Lucero Toral"
+  email: "torall@umich.edu"
+
 remote_theme: pages-themes/cayman@v0.2.0
+
+markdown: kramdown
+permalink: pretty
+
 plugins:
-- jekyll-remote-theme 
+  - jekyll-remote-theme
+  - jekyll-feed
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jekyll-include-cache
+
+sass:
+  sass_dir: assets/css
+
+exclude: 
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle
+  - .sass-cache
+  - _site
+  - .jekyll-cache
+
+keep_files: 
+  - .gitignore
+
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "default"
+
+theme_color: "#2E86AB"
+show_footer: true
+show_navbar: true
+
+social_links:
+  - name: "GitHub"
+    url: "https://github.com/torallify"
+  - name: "LinkedIn"
+    url: "https://www.linkedin.com/in/torallify/"
+
+paginate: 10
+paginate_path: "/page:num/"
