--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: [🍽️ Recipe Nutrition and Rating Analysis]
+title: 🍽️ Recipe Nutrition and Rating Analysis
 description: [Project for EECS 398 at The University of Michigan - Ann Arbor]
 
 theme: jekyll-theme-cayman
